--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <h2>Thibaut Assus's Git Achievements</h2>
-Unlocked       14/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 35 points<br>
+Unlocked       14/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 36 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -39,6 +39,7 @@ Unlocked       14/      50 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Garage Inventor</div>  <div class="info">Used a custom alias for a Git command</div></li>
 <li><div class="title">Let there be light</div>  <div class="info">Commit without a parent.</div></li>
 <li><div class="title">Master Blacksmith (Level -inf)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
+<li><div class="title">Master Stone Mason (Level 7)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Socialite (Level 4)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Socialite (Level 5)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Socialite (Level 6)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
@@ -49,25 +50,25 @@ Unlocked       14/      50 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-2027 symbolic-ref
-2020 status
- 406 st
- 100 add
-  88 commit
-  71 push
-  32 pull
-  31 diff
-  23 co
-  16 rm
+2434 symbolic-ref
+2415 status
+ 489 st
+ 121 add
+ 107 commit
+  81 push
+  41 pull
+  33 diff
+  33 co
+  17 rm
   12 clone
+   8 branch
    7 achievements
-   5 branch
-   4 reset
+   5 reset
    4 remote
+   4 merge
    4 log
    4 blame
    3 submodule
-   3 merge
    2 config
    2 ci
    1 show
