--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 <body>
 
 <h2>Thibaut Assus's Git Achievements</h2>
-Unlocked       14/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 36 points<br>
+Unlocked       14/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 37 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 3)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Banker (Level 1)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
 <li><div class="title">Apprentice Banker (Level 2)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
+<li><div class="title">Apprentice Banker (Level 3)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
 <li><div class="title">Apprentice Cathedral Worker (Level 1)</div>  <div class="info">Cloned submodule repository and checked out commits specified by superproject.</div></li>
 <li><div class="title">Apprentice Historian (Level 1)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Apprentice Historian (Level 2)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
@@ -50,29 +51,29 @@ Unlocked       14/      50 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-2434 symbolic-ref
-2415 status
- 489 st
- 121 add
- 107 commit
-  81 push
+2732 symbolic-ref
+2713 status
+ 548 st
+ 137 add
+ 120 commit
+  86 push
   41 pull
-  33 diff
-  33 co
-  17 rm
+  40 co
+  35 diff
+  18 rm
   12 clone
-   8 branch
+   9 branch
    7 achievements
+   6 merge
    5 reset
    4 remote
-   4 merge
    4 log
+   4 ci
    4 blame
    3 submodule
+   2 init
    2 config
-   2 ci
    1 show
-   1 init
    1 help
    1 checkout
 </pre>
