New achievement Master Author (Level 7)

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <h2>Thibaut Assus's Git Achievements</h2>
-Unlocked       14/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 37 points<br>
+Unlocked       14/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 38 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -39,6 +39,7 @@ Unlocked       14/      50 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Author (Level 6)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Garage Inventor</div>  <div class="info">Used a custom alias for a Git command</div></li>
 <li><div class="title">Let there be light</div>  <div class="info">Commit without a parent.</div></li>
+<li><div class="title">Master Author (Level 7)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Master Blacksmith (Level -inf)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Master Stone Mason (Level 7)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Socialite (Level 4)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
@@ -51,24 +52,24 @@ Unlocked       14/      50 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-2732 symbolic-ref
-2713 status
- 548 st
- 137 add
- 120 commit
-  86 push
+2901 symbolic-ref
+2875 status
+ 579 st
+ 146 add
+ 128 commit
+  90 push
+  48 co
   41 pull
-  40 co
   35 diff
   18 rm
-  12 clone
-   9 branch
+  13 clone
+  10 branch
+   7 merge
    7 achievements
-   6 merge
    5 reset
+   5 ci
    4 remote
    4 log
-   4 ci
    4 blame
    3 submodule
    2 init
@@ -76,6 +77,7 @@ Git commands sorted by usage:
    1 show
    1 help
    1 checkout
+   1 Mon
 </pre>
 <script type="text/javascript">
 function showLocked() {
